--- a/탐색.md
+++ b/탐색.md
@@ -1,3 +1,53 @@
-## 탐색유형 
-### DFS, BFS , 재귀함수 들을 주로 사용 
+## 📚🔍탐색유형 
+#### DFS(깊이우선탐색), BFS(너비우선탐색), 재귀함수 들을 주로 사용 
 
+- 탐색: 특정 조건을 만족하는 상태를 찾기 위한 일련의 과정 
+
+- BFS에서는 Queue 자료 구조, DFS에서는 재귀함수와 stack 자료 구조를 사용한다 
+
+> 구현에 초점을 둔 탐색 문제 
+1. 부분 상태 탐색 (위치 이동, 수) : 상태 체크 함수 필요
+2. 전체 상태 탐색 (map) : n차원 배열을 조정하는 방법 필요 
+
+> 알고리즘 지식 활용에 초점을 둔 탐색 문제 
+1. 위상정렬
+2. 최소신장트리
+3. 최단거리
+
+#### 유기농 야채 문제 (플로드 필 문제)
+
+0은 배추가 심어져 있지 않고 1은 배추가 심어져 있다고 가정할 때에 2차원 배열이 주어졌을 때 1로 이루어진 부분집합의 개수를 구하여라 
+
+탐색할때에 인덱스 범위에서 벗어나지 않기 위해서 0 (조건에서 false인 수)를 배열로 감싼다 
+
+> 핵심 아이디어 코드 
+```
+### 배열 구성
+  global b, check
+  b = [[0 for i in range(width + 2)] for _ in range(height + 2)]
+  check = [[0 for i in range(width + 2)] for _ in range(height + 2)] ## 방문 여부 확인 하는 배열 
+  for _ in range(k):
+    x, y = map(int, input().split())
+    b[y-1][x-1] = 1
+  
+  for i in range(1, height+1):
+    for j in range(1, width + 1):
+      if b[i][j] == 0 or check[i][j]:
+        continue
+      dfs(i,j)
+      answer += 1
+  print(answer)
+  
+  ### dfs함수 
+  dx, dy = [1,0,-1,0],[0,1,0,-1] ## 방향 가리키는 변수 (동서남북)
+  def dfs(x,y):
+    global b, check
+    if check[x][y] == 1: ## 방문을 한 경우 진행하지 않는다
+      return
+    check[x][y] = 1
+    for i in range(4): ## 4방향으로 살펴보기
+      xx, yy = x + dx[i], y + dy[i]
+      if b[xx][yy] == 0 or check[xx][yy]:
+        continue
+      dfs(xx,yy)
+```
